--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,9 +1,11 @@
 {
-    "requests": {
-        "not_found": "Record was not found",
-        "bad_request": "Invalid Request"
-    },
-    "items": {
-        "invalid_updated_at": "updatedAt must be later than or equals createdAt"
+    "translation": {
+        "requests": {
+            "not_found": "Record was not found",
+            "bad_request": "Invalid Request"
+        },
+        "items": {
+            "invalid_updated_at": "updatedAt must be later than or equals createdAt"
+        }
     }
 }
