--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -1,9 +1,11 @@
 {
-    "requests": {
-        "not_found": "レコードが見つかりません",
-        "bad_request": "不正なリクエストです"
-    },
-    "items": {
-        "invalid_updated_at": "updatedAt は createdAt 以降でなければなりません"
+    "translation": {
+        "requests": {
+            "not_found": "レコードが見つかりません",
+            "bad_request": "不正なリクエストです"
+        },
+        "items": {
+            "invalid_updated_at": "updatedAt は createdAt 以降でなければなりません"
+        }
     }
 }
